header section for html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
         <title>Prakash Bharathi</title>
     </head>
     <Body>
-        <h1 class="heading">
-            Prakash Bharathi
-        </h1>
+        <div class="header">
+            <div class="heading">
+                <h1>
+                    Prakash Bharathi
+                </h1>
+            </div>
+            <div class="main">
+                <ul>
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Join us</a></li>
+                    <li><a href="#">Contact us</a></li>
+                </ul>
+            </div>
+        </div>
     </Body>    
 </html>
